--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "globby": "^14.1.0",
     "openai": "^5.6.0",
     "path": "^0.12.7",
+    "playwright": "^1.53.1",
     "serve-static": "^2.2.0"
-  },
-  "devDependencies": {
   }
 }
